--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-phone-number-input": "^3.4.12",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
