--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/auth": "^1.10.7",
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "@stripe/react-stripe-js": "^3.6.0",
@@ -17,6 +18,7 @@
     "axios": "^1.8.4",
     "cra-template-pwa": "^2.0.0",
     "date-fns": "^4.1.0",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.488.0",
     "react": "^19.0.0",
